--- a/SSL Season 2.json
+++ b/SSL Season 2.json
@@ -13,7 +13,8 @@
     "JD",
     "MSG",
     "SR",
-    "TB"
+    "TB",
+    "TKO"
   ],
   "season": [
     {
@@ -37,7 +38,12 @@
       "round1_winner": "A",
       "round2_winner": "B",
       "lead_A": "CQB",
-      "lead_B": "II Corps"
+      "lead_B": "II Corps",
+      "playoffs": false,
+      "lead_A_r1": null,
+      "lead_B_r1": null,
+      "lead_A_r2": null,
+      "lead_B_r2": null
     },
     {
       "A": [
@@ -61,7 +67,12 @@
       "round1_winner": "A",
       "round2_winner": "B",
       "lead_A": "FSB",
-      "lead_B": "12th VA"
+      "lead_B": "12th VA",
+      "playoffs": false,
+      "lead_A_r1": null,
+      "lead_B_r1": null,
+      "lead_A_r2": null,
+      "lead_B_r2": null
     },
     {
       "A": [
@@ -84,7 +95,12 @@
       "round1_winner": "B",
       "round2_winner": "B",
       "lead_A": "10th US",
-      "lead_B": "59th NY"
+      "lead_B": "59th NY",
+      "playoffs": false,
+      "lead_A_r1": null,
+      "lead_B_r1": null,
+      "lead_A_r2": null,
+      "lead_B_r2": null
     },
     {
       "A": [
@@ -107,7 +123,12 @@
       "round1_winner": "A",
       "round2_winner": "B",
       "lead_A": "TB",
-      "lead_B": "CB"
+      "lead_B": "CB",
+      "playoffs": false,
+      "lead_A_r1": null,
+      "lead_B_r1": null,
+      "lead_A_r2": null,
+      "lead_B_r2": null
     },
     {
       "A": [
@@ -130,7 +151,12 @@
       "round1_winner": "A",
       "round2_winner": "A",
       "lead_A": "CQB",
-      "lead_B": "MSG"
+      "lead_B": "MSG",
+      "playoffs": false,
+      "lead_A_r1": null,
+      "lead_B_r1": null,
+      "lead_A_r2": null,
+      "lead_B_r2": null
     },
     {
       "A": [
@@ -153,7 +179,12 @@
       "round1_winner": "A",
       "round2_winner": "A",
       "lead_A": "FSB",
-      "lead_B": "7th TX"
+      "lead_B": "7th TX",
+      "playoffs": false,
+      "lead_A_r1": null,
+      "lead_B_r1": null,
+      "lead_A_r2": null,
+      "lead_B_r2": null
     },
     {
       "A": [
@@ -176,7 +207,12 @@
       "round1_winner": "A",
       "round2_winner": "B",
       "lead_A": "59th NY",
-      "lead_B": "JD"
+      "lead_B": "JD",
+      "playoffs": false,
+      "lead_A_r1": null,
+      "lead_B_r1": null,
+      "lead_A_r2": null,
+      "lead_B_r2": null
     },
     {
       "A": [
@@ -198,7 +234,12 @@
       "round1_winner": "A",
       "round2_winner": "B",
       "lead_A": "TB",
-      "lead_B": "AVC"
+      "lead_B": "AVC",
+      "playoffs": false,
+      "lead_A_r1": null,
+      "lead_B_r1": null,
+      "lead_A_r2": null,
+      "lead_B_r2": null
     },
     {
       "A": [
@@ -221,7 +262,12 @@
       "round1_winner": "A",
       "round2_winner": "A",
       "lead_A": "II Corps",
-      "lead_B": "MSG"
+      "lead_B": "MSG",
+      "playoffs": false,
+      "lead_A_r1": null,
+      "lead_B_r1": null,
+      "lead_A_r2": null,
+      "lead_B_r2": null
     },
     {
       "A": [
@@ -244,7 +290,12 @@
       "round1_winner": "B",
       "round2_winner": "B",
       "lead_A": "12th VA",
-      "lead_B": "7th TX"
+      "lead_B": "7th TX",
+      "playoffs": false,
+      "lead_A_r1": null,
+      "lead_B_r1": null,
+      "lead_A_r2": null,
+      "lead_B_r2": null
     },
     {
       "A": [
@@ -267,7 +318,12 @@
       "round1_winner": "A",
       "round2_winner": "B",
       "lead_A": "JD",
-      "lead_B": "10th US"
+      "lead_B": "10th US",
+      "playoffs": false,
+      "lead_A_r1": null,
+      "lead_B_r1": null,
+      "lead_A_r2": null,
+      "lead_B_r2": null
     },
     {
       "A": [
@@ -290,7 +346,124 @@
       "round1_winner": "B",
       "round2_winner": "B",
       "lead_A": "AVC",
-      "lead_B": "CB"
+      "lead_B": "CB",
+      "playoffs": false,
+      "lead_A_r1": null,
+      "lead_B_r1": null,
+      "lead_A_r2": null,
+      "lead_B_r2": null
+    },
+    {
+      "A": [
+        "12th VA",
+        "59th NY",
+        "AVC",
+        "CB",
+        "CQB",
+        "TB"
+      ],
+      "B": [
+        "10th US",
+        "7th TX",
+        "FSB",
+        "II Corps",
+        "JD",
+        "MSG",
+        "SR"
+      ],
+      "round1_winner": "B",
+      "round2_winner": "B",
+      "lead_A": null,
+      "lead_B": null,
+      "playoffs": true,
+      "lead_A_r1": "TB",
+      "lead_B_r1": "7th TX",
+      "lead_A_r2": "AVC",
+      "lead_B_r2": "II Corps"
+    },
+    {
+      "A": [
+        "59th NY",
+        "7th TX",
+        "CQB",
+        "II Corps",
+        "JD",
+        "MSG",
+        "SR"
+      ],
+      "B": [
+        "10th US",
+        "12th VA",
+        "AVC",
+        "CB",
+        "FSB",
+        "TKO"
+      ],
+      "round1_winner": "B",
+      "round2_winner": "B",
+      "lead_A": null,
+      "lead_B": null,
+      "playoffs": true,
+      "lead_A_r1": "59th NY",
+      "lead_B_r1": "FSB",
+      "lead_A_r2": "CQB",
+      "lead_B_r2": "CB"
+    },
+    {
+      "A": [
+        "12th VA",
+        "AVC",
+        "FSB",
+        "II Corps",
+        "JD",
+        "MSG",
+        "SR"
+      ],
+      "B": [
+        "10th US",
+        "59th NY",
+        "7th TX",
+        "CB",
+        "CQB",
+        "TKO"
+      ],
+      "round1_winner": "B",
+      "round2_winner": "B",
+      "lead_A": null,
+      "lead_B": null,
+      "playoffs": true,
+      "lead_A_r1": "FSB",
+      "lead_B_r1": "7th TX",
+      "lead_A_r2": "II Corps",
+      "lead_B_r2": "CB"
+    },
+    {
+      "A": [
+        "10th US",
+        "7th TX",
+        "CQB",
+        "FSB",
+        "II Corps",
+        "MSG",
+        "TKO"
+      ],
+      "B": [
+        "12th VA",
+        "59th NY",
+        "AVC",
+        "CB",
+        "JD",
+        "SR"
+      ],
+      "round1_winner": "A",
+      "round2_winner": null,
+      "lead_A": "7th TX",
+      "lead_B": "CB",
+      "playoffs": true,
+      "lead_A_r1": "7th TX",
+      "lead_B_r1": "CB",
+      "lead_A_r2": null,
+      "lead_B_r2": null
     }
   ],
   "team_names": {
