S2 SSL Saved - SSL Tracker updated to save unit numbers from week to week, auto filling with last numbers used

--- a/SSL Season 2.json
+++ b/SSL Season 2.json
@@ -546,5 +546,67 @@
     "loss_assist": "0",
     "bonus_2_0_lead": "0",
     "bonus_2_0_assist": "0"
+  },
+  "unit_player_counts": {
+    "10th US": {
+      "min": "20",
+      "max": "25"
+    },
+    "12th VA": {
+      "min": "0",
+      "max": "100"
+    },
+    "59th NY": {
+      "min": "0",
+      "max": "100"
+    },
+    "7th KS": {
+      "min": "0",
+      "max": "100"
+    },
+    "7th TX": {
+      "min": "0",
+      "max": "100"
+    },
+    "AVC": {
+      "min": "0",
+      "max": "100"
+    },
+    "CB": {
+      "min": "0",
+      "max": "100"
+    },
+    "CQB": {
+      "min": "0",
+      "max": "100"
+    },
+    "FSB": {
+      "min": "0",
+      "max": "100"
+    },
+    "II Corps": {
+      "min": "0",
+      "max": "100"
+    },
+    "JD": {
+      "min": "0",
+      "max": "100"
+    },
+    "MSG": {
+      "min": "0",
+      "max": "100"
+    },
+    "SR": {
+      "min": "0",
+      "max": "100"
+    },
+    "TB": {
+      "min": "0",
+      "max": "100"
+    },
+    "TKO": {
+      "min": "0",
+      "max": "100"
+    }
   }
 }
